# agenticos

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
data/: agenticos.db
deploy/aws/: README.md  task-definition.json
scripts/: seed_db.py  start_ui.sh
src/agenticos/: __init__.py  exceptions.py  logging_config.py  settings.py
src/agenticos/agents/: graph.py  planner.py  specialists.py  state.py  supervisor.py
src/agenticos/api/: __init__.py  app.py
src/agenticos/db/: connection.py  repositories.py
src/agenticos/llm/: client.py
src/agenticos/memory/: __init__.py  store.py
src/agenticos/rag/: documentation_repository.py  loader.py  vector_store.py
src/agenticos/tools/: registry.py
src/agenticos/ui/: streamlit_app.py
tests/: conftest.py  test_api.py  test_graph.py  test_memory.py  test_planner.py  test_repositories.py  test_specialists.py  test_supervisor.py
