[project]
name = "agenticos"
version = "2.1.0"
description = "Multi-agent building-operations investigation assistant (LangGraph + Ollama + RAG)"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
